# iterative_histogram_equalization

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.googletest.in
include/: histogram_eq.h  template_example.h
libwb/: CMakeLists.txt  compile_commands.json  sources.cmake
report/: Cópia de CUDA_Occupancy_Calculator.xls  refs.bib  template.tex
scripts/: README.md
src/: generator_image.py  histogram_eq.cpp  histogram_eq.cu  histogram_eq_metrics.cu  histogram_eq_par  histogram_eq_par.cpp  lake.ppm  main.cpp  performance_comparison.csv  plotting_gpu.py  queryCuda  queryCuda.cu  results.csv  testing.py  testing_gpu.py  tests.sh
test/: CMakeLists.txt  histogram_eq_test.cpp  template_test.cpp
